hopefully this fixes the white space on mobile

--- a/docs/style.css
+++ b/docs/style.css
@@ -1,3 +1,15 @@
+html, body {
+    height: 100%;
+}
+.main-container {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+main {
+    flex: 1;
+}
+
 /*Header Section*/
 body{
     padding:0;
@@ -58,8 +70,6 @@ body{
     height: auto;
 }
 
-
-
 /*Bottom Tabs Section*/
 #bottom-tabs{
 position: sticky;
@@ -86,6 +96,9 @@ padding-top: none;
 /*Footer*/
 footer {
     background-image: url('images/wood-bg.png');
+    background-repeat: repeat-x;
+    padding: 1rem;
+    text-align: center;
     color: black;
     font-weight: bold;
 }
